--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -166,7 +166,7 @@
         app:layout_constraintVertical_bias="0.477" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/buttonSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="57dp"
