--- a/app/src/main/res/layout/example_item.xml
+++ b/app/src/main/res/layout/example_item.xml
@@ -42,6 +42,16 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"/>
 
+        <TextView
+            android:id="@+id/textViewCost"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="250dp"
+            android:text="TextView"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
