--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -124,21 +124,6 @@
         app:layout_constraintVertical_bias="0.353" />
 
     <EditText
-        android:id="@+id/editDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:ems="10"
-        android:inputType="date"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.988"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.134"
-        tools:text="Date" />
-
-    <EditText
         android:id="@+id/editReason"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -179,4 +164,19 @@
             android:layout_height="match_parent"
             android:layout_weight="1"/>
     </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/datePickerButton"
+        style="?android:spinnerStyle"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="92dp"
+        android:text="JAN 01 2022"
+        android:textColor="@color/black"
+        android:textSize="22sp"
+        app:layout_constraintHorizontal_bias="0.874"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="openDatePicker"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
