--- a/app/src/main/res/layout/example_item.xml
+++ b/app/src/main/res/layout/example_item.xml
@@ -23,16 +23,16 @@
             android:textStyle="bold"
             android:textColor="@color/black"
             android:id="@+id/textView"/>
-            <TextView
+
+        <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Line 2"
-            android:textSize="15sp"
-            android:layout_marginStart="8dp"
             android:layout_below="@+id/textView"
+            android:layout_marginStart="8dp"
             android:layout_toEndOf="@+id/imageView"
-            />
+            android:text="Line 2"
+            android:textSize="15sp" />
 
         <ImageView
             android:id="@+id/image_delete"
@@ -51,5 +51,17 @@
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textViewDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textViewCost"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="250dp"
+            android:layout_marginTop="1dp"
+            android:text="dateView" />
+
+
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
