--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -7,16 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity4">
 
-    <com.github.mikephil.charting.charts.BarChart
-        android:id="@+id/barChart_view"
-        android:layout_width="411dp"
-        android:layout_height="370dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.113" />
-
-
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/activity_main4_piechart"
+        android:layout_width="410dp"
+        android:layout_height="430dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <Button
         android:id="@+id/buttonDay"
         android:layout_width="wrap_content"
